--- a/development/labs.kv
+++ b/development/labs.kv
@@ -1,13 +1,6 @@
-BoxLayoutExample:
+MainScreen:
 
-<Options>:
-    orientation: 'vertical'
-    Button:
-        text: "Profile"
-    Button:
-        text: "Setting"
-
-<BoxlayoutExample>:
+<MainScreen>:
     #Force Method fo doing it
     orientation: 'vertical'
     Label:
@@ -25,4 +18,4 @@ BoxLayoutExample:
     
 <MainWidget>:
     Label:
-        text: "ahhah"
+        text: ""
