--- a/development/labs.kv
+++ b/development/labs.kv
@@ -20,7 +20,7 @@ HomeScreen:
             text: "CHOOSE YOUR NUMBERS"
             color: (1-root.light),(1-root.light),(1-root.light),1
 
-            font_name: root.Roboto
+            font_name: "./Roboto.ttf"
             font_size: "20dp"
 
             size_hint: None, None
@@ -32,7 +32,7 @@ HomeScreen:
             id: "Number_Display"
             text: root.available_numbers_label
 
-            font_name: root.Lcd
+            font_name: "./Lcd.ttf"
             font_size:  "30dp"
 
             color: (1-root.light),(1-root.light),(1-root.light),1
@@ -125,7 +125,7 @@ HomeScreen:
                 text:"WELCOME TO GET CLOSEST"
                 color: (1-root.light),(1-root.light),(1-root.light),1
                 
-                font_name: root.Roboto#"./fonts/Roboto.ttf" #just experimental
+                font_name: "./Roboto.ttf" #just experimental
                 font_size: "20dp" 
 
                 size_hint: None, None
