[COMPLETION] winner system added

--- a/development/labs.kv
+++ b/development/labs.kv
@@ -12,7 +12,7 @@ HomeScreen:
         orientation: 'vertical'
         spacing: "10dp"
         Label:
-            text: "YOU WERE " + str(root.diff)+ " OFF"
+            text: root.last_label
 
             color: (1-root.light),(1-root.light),(1-root.light),1
 
